some padding/margin/spacing fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 body{
     font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
 }
 .back_image{
     background-image: url("../img/bckimg.jpg");
+    background-position: left;
+    background-size: contain;
+ 
 }
 
 .link-menu {
@@ -24,4 +28,15 @@ body{
 #logo{
    width: 50px;
    border: 3px solid #343a40;
+}
+
+.shadowcard{
+    box-shadow: 5px 10px 18px #111111;
+}
+
+.cardimg{
+    align-self: center;
+    padding-top: 16px;
+    width: 80%;
+    height: 60%;
 }
